# Camera_Data_Processing

./: CMakeLists.txt  LICENSE  README.md
config/: config.yml  contour.yml  detection.yml  lane.yml  montage.yml  ransac_fullsize.yml  ransac_fullsize_desk.yml  ransac_halfsize.yml  t265_fullsize.yml  t265_halfsize.yml  visual.yml
include/: CameraModel.h  CameraObjectDetection.h  Detection.h  Disparity.h  Global.h  GroundFilter.h  Lane.h  MonoDetector.h  Motion.h  ObjectDetector.h  ObjectFilter.h  RScamera.h  Utility.h  Visualization.h  main.h
include/ELAS/: StereoEfficientLargeScale.h  descriptor.h  filter.h  matrix.h
src/: CameraModel.cpp  CameraObjectDetection.cpp  Detection.cpp  Disparity.cpp  GroundFilter.cpp  Lane.cpp  MonoDetector.cpp  Motion.cpp  ObjectDetector.cpp  ObjectFilter.cpp  RScamera.cpp  Utility.cpp  Visualization.cpp  main.cpp
src/ELAS/: descriptor.cpp  elas.cpp  filter.cpp  matrix.cpp  triangle.cpp
